// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart 1`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  style={
    Object {
      "fontFamily": "var(--pf-chart-global--FontFamily)",
      "fontSize": 14,
      "letterSpacing": "var(--pf-chart-global--letter-spacing)",
    }
  }
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;

exports[`Chart 2`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  style={
    Object {
      "fontFamily": "var(--pf-chart-global--FontFamily)",
      "fontSize": 14,
      "letterSpacing": "var(--pf-chart-global--letter-spacing)",
    }
  }
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;

exports[`renders component text 1`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  style={
    Object {
      "fontFamily": "var(--pf-chart-global--FontFamily)",
      "fontSize": 14,
      "letterSpacing": "var(--pf-chart-global--letter-spacing)",
    }
  }
  text="This is a test"
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;
